fixed line wrap

--- a/src/app/map/[id]/page.css
+++ b/src/app/map/[id]/page.css
@@ -11,7 +11,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 30%;
     height: 100%;
     background-color: var(--lighter-blue);
     color: var(--even-darker-darkest-blue);
