--- a/src/components/maps/search/MapSearch.css
+++ b/src/components/maps/search/MapSearch.css
@@ -69,7 +69,6 @@
     align-items: center;
     border-radius: 1rem;
     box-shadow: 1rem;
-    height:100%;
 }
 
 .map-name {
